[tool.poetry]
name = "lktk"
version = "0.1.0"
description = ""
authors = ["dr666m1 <skndr666m1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
