[tool.poetry]
name = "lkmlfmt"
version = "0.0.5"
description = ""
authors = ["dr666m1 <skndr666m1@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
lkmlfmt = "lkmlfmt.command:run"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.5"
shandy-sqlfmt = "^0.17.0"
click = "^8.1.3"
djhtml = "^3.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
