[tool.poetry]
name = "lkmlfmt"
version = "0.0.15"
description = ""
authors = ["kitta65 <kitta65kitta@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
lkmlfmt = "lkmlfmt.command:run"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.5"
click = "^8.1.3"
shandy-sqlfmt = ">=0.20,<0.25"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<9.0.0"
black = ">=23.1,<25.0"
flake8 = ">=6,<8"
mypy = "^1.0.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
